# federated-openapi-poc

./: README.md  gw.py  products.py  pyproject.toml  reviews.py  users.py
